Fixed big gaps in messages sent one after another

--- a/Core.css
+++ b/Core.css
@@ -2217,18 +2217,6 @@ svg[name=Nitro] g path {
 	background-color: rgba(0, 0, 0, 0);
 }
 
-.avatar-1BDn8e {
-	margin-top: -1px;
-	top: auto;
-	left: 10px;
-	width: 50px;
-	height: 50px;
-	border-radius: 50px;
-	border-color: #00000000;
-	border-style: solid;
-	border-width: 2px;;
-}
-
 #bd-pub-li {
 	height: 0px;
 	margin-bottom: 0px;
@@ -3753,6 +3741,28 @@ img.da-voiceAvatar, .speaking-B2MXPi {
     background-color: rgba(255, 255, 255,.15)!important;
 }
 
-.markup-2BOw-j {
-	min-height: 30px;
+.contents-2mQqc9 {
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+.wrapper-2a6GCs {
+	margin-top: -6px;
+	margin-bottom: -6px;
+}
+
+.avatar-1BDn8e {
+	margin-top: -5px;
+	top: auto;
+	left: 10px;
+	width: 50px;
+	height: 50px;
+	border-radius: 50px;
+	border-color: #00000000;
+	border-style: solid;
+	border-width: 2px;;
+}
+
+.mentioned-xhSam7:before, .replying-1x3H0T:before {
+    width: 4px;
 }
